More content added under header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
         
+        
     </head>
 
     <body>
@@ -17,6 +18,21 @@
             </ul>
         </div>
 
+        <div class = "header-content">
+            <div class = "header-content-left">
+                <div class = "header-content-text">
+                    This website is awesome
+                </div>
+                <div class = "header-content-subtext">
+                    This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast
+                </div>
+                <button class = "header-content-button">Sign up</button>
+            </div>
+
+            <div class="header-content-right">
+                <img class = "header-content-placeholder" src="./images/pyramid.jpg" alt = "pyramid">
+            </div>
+        </div>
     </body>
 
 </html>
