--- a/index.html
+++ b/index.html
@@ -76,9 +76,16 @@
                     <div class = "container-text-one">Call to action! It's time!</div>
                     <div class = "container-text-two">Sign up for our product by clicking that button right over there!</div>
                 </div>
+                <div class = "container-right">
+                    <button class="sign-up-button">Sign up</button>
+                </div>
             </div>
 
 
+        </div>
+
+        <div class="footer">
+            Copyright © The Odin Project 2021
         </div>
     </body>
 
